# akvelon-python-course

task_1/: main.py
task_2/: main.py
task_3/: main.py
task_3/pickle_input/: __init__.py  input_func.py
task_4/: main.py
task_4/transactions/: exception.py  manager.py
task_5/: main.py
task_6_todo_flask/: app.py  db.pkl  models.py  pyproject.toml  service.py
