[tool.poetry]
name = "task_6_todo_flask"
version = "0.1.0"
description = ""
authors = ["Veronika <verasos13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
Flask = "^1.1.2"
requests = "^2.25.1"
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
